--- a/assets/css/layout/_main.css
+++ b/assets/css/layout/_main.css
@@ -22,12 +22,38 @@ section{
     min-width: 350px;
     max-width: 400px;
     background: rgb(0,0,0);
-background: linear-gradient(180deg, rgba(0,0,0,1) 0%, rgba(0,0,0,0) 40%, rgba(0,0,0,0) 52%, rgba(0,0,0,1) 86%);
+    background: linear-gradient(180deg, rgba(0,0,0,1) 0%, rgba(0,0,0,0) 40%, rgba(0,0,0,0) 52%, rgba(0,0,0,1) 86%);
+    display: flex;
+    flex-direction: column;
 
 }
 
 #cookies{
     text-align: center;
+    background: black;
+    width: 100%;
+    opacity: 0.5;
+}
+
+#bigCookie{
+    border-radius: 999px;
+    background-image: url('../../images/perfect-cookie.png');
+    background-repeat: no-repeat;
+    background-size: 110%;
+    background-position: center;
+    height: 225px;
+    width: 225px;
+    margin-top: 3.5em;
+    box-shadow: 0 0 60px 8px #ffffff;
+    cursor: pointer;
+    transition-duration: 0.5s;
+}
+
+#bigCookie:hover{
+    transform: scale(1.1);
+}
+#bigCookie:active {
+    transform: scale(0.95);
 }
 
 #production{
