--- a/assets/css/layout/_main.css
+++ b/assets/css/layout/_main.css
@@ -1,9 +1,9 @@
-#game{
+#game {
     display: flex;
     justify-content: space-around;
 }
 
-section{
+section {
     padding-top: 15px;
     height: 100vh;
     display: flex;
@@ -11,31 +11,29 @@ section{
     align-items: center;
 }
 
-.separator{
+.separator {
     background-image: url('../../images/panel-vertical.png');
     height: 100vh;
     width: 16px;
 }
 
-#bakery{
-    /* background-color: red; */
+#bakery {
     min-width: 350px;
     max-width: 400px;
-    background: rgb(0,0,0);
-    background: linear-gradient(180deg, rgba(0,0,0,1) 0%, rgba(0,0,0,0) 40%, rgba(0,0,0,0) 52%, rgba(0,0,0,1) 86%);
+    background: rgb(0, 0, 0);
+    background: linear-gradient(180deg, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 0) 40%, rgba(0, 0, 0, 0) 52%, rgba(0, 0, 0, 1) 86%);
     display: flex;
     flex-direction: column;
-
 }
 
-#cookies{
+#cookies {
     text-align: center;
     background: black;
     width: 100%;
     opacity: 0.5;
 }
 
-#bigCookie{
+#bigCookie {
     border-radius: 999px;
     background-image: url('../../images/perfect-cookie.png');
     background-repeat: no-repeat;
@@ -49,21 +47,28 @@ section{
     transition-duration: 0.5s;
 }
 
-#bigCookie:hover{
+#bigCookie:hover {
     transform: scale(1.1);
 }
+
 #bigCookie:active {
     transform: scale(0.95);
 }
 
-#production{
-    /* background-color: purple; */
+#production {
     min-width: 341.3px;
-    flex:2;
+    flex: 2;
+    background: rgb(0, 0, 0);
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0) 70%, rgba(0, 0, 0, 1) 100%);
 }
 
-#store{
-    /* background-color: pink; */
+#production hr {
+    background: url("../../images/panel-horizontal.png");
+    width: 53vw;
+    height: 2vh;
+}
+
+#store {
     min-width: 300px;
     max-width: 300px;
 }
