--- a/assets/css/layout/_main.css
+++ b/assets/css/layout/_main.css
@@ -60,13 +60,37 @@ section {
     flex: 2;
     background: rgb(0, 0, 0);
     background: linear-gradient(0deg, rgba(0, 0, 0, 0) 70%, rgba(0, 0, 0, 1) 100%);
+    overflow-y: scroll;
 }
+
+
 
 #production hr {
     background: url("../../images/panel-horizontal.png");
-    width: 53vw;
-    height: 2vh;
+    border: none;
+    width: 100%;
+    height: 16px;
 }
+
+#production::-webkit-scrollbar { 
+    width: 15px; 
+    border: 2px solid blue; 
+} 
+  
+#production::-webkit-scrollbar-button:single-button { 
+    background-color: red; 
+    height: 16px; 
+    width: 16px; 
+} 
+  
+  #production::-webkit-scrollbar-thumb { 
+    background: black; 
+} 
+  
+ #production::-webkit-scrollbar-track { 
+    background: white; 
+} 
+
 
 #store {
     min-width: 300px;
