--- a/assets/css/layout/_main.css
+++ b/assets/css/layout/_main.css
@@ -70,6 +70,7 @@ section {
     border: none;
     width: 100%;
     height: 16px;
+    margin-top: 15px;
 }
 
 #production::-webkit-scrollbar { 
@@ -97,6 +98,8 @@ section {
     min-width: 300px;
     max-width: 300px;
     overflow-y: scroll;
+    background: rgb(0, 0, 0);
+    background: linear-gradient(180deg, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 0) 40%, rgba(0, 0, 0, 0) 52%, rgba(0, 0, 0, 1) 86%);
 }
 
 #store::-webkit-scrollbar { 
@@ -118,3 +121,10 @@ section {
 #store::-webkit-scrollbar-track { 
     background: white; 
 } 
+
+#buildings{
+    background-image: url('../../images/panel-horizontal.png');
+    width: 100%;
+    min-height: 16px;
+    margin-top: 15px;
+}
