--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,5 +1,5 @@
 @import url('./base/_fonts.css');
 @import url('./base/_reset.css');
 @import url('./base/_typography.css');
-@import url('./components/_buttons.css');
+@import url('./components/_buildings.css');
 @import url('./layout/_main.css');
