--- a/assets/css/components/_buildings.css
+++ b/assets/css/components/_buildings.css
@@ -1,3 +1,20 @@
+#buildings{
+    background-image: url('../../images/panel-horizontal.png');
+    background-repeat: no-repeat;
+    width: 100%;
+    min-height: 16px;
+    margin-top: 15px;
+    font-size:11px;
+    text-transform: uppercase;
+    font-weight: bold;
+    text-shadow: 0px 1px 4px #000000;
+    /* background: red; */
+}
+
+#buildings:hover::before{
+    content: 'building';
+}
+
 #building-cursor, #building-grandma{
     background-image: url('../../images/store-tile.jpg');
     background-repeat: no-repeat;
@@ -5,9 +22,10 @@
     cursor: pointer;
     width: 100%;
     /* height: 100px; */
-    padding: 0.7em;
+    /* padding: 0.1em; */
     transition-duration: 0.2s;
     display: flex;
+    align-items: center;
     justify-content: flex-start;
 }
 
@@ -18,7 +36,7 @@
 .name{
     font-size: 20.8px;
     text-shadow: 0px 0px 4px #000000;
-    background-color: red;
+    /* background-color: red; */
 }
 
 .cost{
@@ -27,7 +45,7 @@
     font-size: 11.2px;
     color: #66ff66;
     text-shadow: 0px 1px 4px #000000;
-    background-color: green;
+    /* background-color: green; */
 }
 
 .name, .cost{
@@ -36,19 +54,26 @@
 
 .icon{
     position: relative;
-    background: url('../../images/buildings.png') 5px 0px;
-    height: 150%;
+    height: 60px;
     width: 25%;
     /* background-color: yellow; */
-    left: -20px;
-    bottom: 10px;
+    left: -10px;
+    bottom: 0px;
+    background: url('../../images/buildings.png');
+    background-position-x: 5px;
+    background-position-y: 0px;
+    
 }
 
 .locked{
     /* Pour plus tard */
 }
 
-.disabled{
-    /* Pour plus tard */
-    color: #ff6666;
+#buildings .disabled::after{
+    content: '';
+    background-color: black;
+    opacity : 0.5;
+    position: absolute;
+    height: 8vh;
+    width: 19.8vw;
 }
