--- a/assets/css/base/_typography.css
+++ b/assets/css/base/_typography.css
@@ -1,11 +1,11 @@
 *{
     font-size: 16px;
-    color: #ffffff;
 }
 
 h1, h2{
     font-size: 24px;
     font-weight: bold;
+    color: #ffffff;
 }
 
 h1{
@@ -14,4 +14,12 @@ h1{
 
 h2{
     text-shadow: 1px 1px 4px #000000;
+}
+
+div{
+    color: #ffffff;
+}
+
+span{
+    color: #ffffff;
 }
