update function compare w/priceTuils

--- a/assets/css/components/_buildings.css
+++ b/assets/css/components/_buildings.css
@@ -54,7 +54,7 @@
     background-repeat: no-repeat;
     font-size: 11.2px;
     text-shadow: 0px 1px 4px #000000;
-    /* color: #66ff66; */
+    color: #66ff66;
     width: 3.8vw;
     height: 16px;
     text-align: center;
@@ -76,20 +76,15 @@
 }
 
 #building-cursor .icon{
-    background-position-y: -0px;
-    background-position-x: 10px;
+    background-position-y: 0px;
+    background-position-x: 8px;
 } 
 
 #building-grandma .icon{
-    background-position-y: -60px;
-    background-position-x: 10px;
+    background-position-y: -67px;
+    background-position-x: 8px;
 } 
 
-.locked .icon{
-    /* Pour plus tard */
-    background-position-y: -67px;
-    background-position-x: -54px;
-}
 
 .disabled .cost{
     color: #ff6666
