Updating logiques statique en dynamique

--- a/assets/css/layout/_main.css
+++ b/assets/css/layout/_main.css
@@ -1,127 +1,11 @@
-#game {
+#game{
+    height: 100vh;
     display: flex;
     justify-content: space-around;
+    /* background-color: purple; */
 }
 
-section {
-    padding-top: 15px;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.separator {
-    background-image: url('../../images/panel-vertical.png');
-    height: 100vh;
+.separator{
     width: 16px;
+    background-image: url('../../images/panel-vertical.png');
 }
-
-#bakery {
-    min-width: 350px;
-    max-width: 400px;
-    background: rgb(0, 0, 0);
-    background: linear-gradient(180deg, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 0) 40%, rgba(0, 0, 0, 0) 52%, rgba(0, 0, 0, 1) 86%);
-    display: flex;
-    flex-direction: column;
-}
-
-#cookies {
-    text-align: center;
-    background: black;
-    width: 100%;
-    opacity: 0.5;
-}
-
-#bigCookie {
-    border-radius: 999px;
-    background-image: url('../../images/perfect-cookie.png');
-    background-repeat: no-repeat;
-    background-size: 110%;
-    background-position: center;
-    height: 225px;
-    width: 225px;
-    margin-top: 3.5em;
-    box-shadow: 0 0 60px 8px #ffffff;
-    cursor: pointer;
-    transition-duration: 0.5s;
-}
-
-#bigCookie:hover {
-    transform: scale(1.1);
-}
-
-#bigCookie:active {
-    transform: scale(0.95);
-}
-
-#production {
-    min-width: 341.3px;
-    flex: 2;
-    background: rgb(0, 0, 0);
-    background: linear-gradient(0deg, rgba(0, 0, 0, 0) 70%, rgba(0, 0, 0, 1) 100%);
-    overflow-y: scroll;
-}
-
-
-
-#production hr {
-    background: url("../../images/panel-horizontal.png");
-    border: none;
-    width: 100%;
-    height: 16px;
-    margin-top: 15px;
-}
-
-#production::-webkit-scrollbar { 
-    width: 15px; 
-    border: 2px solid blue; 
-    height: 80%;
-} 
-  
-#production::-webkit-scrollbar-button:single-button { 
-    background-color: red; 
-    height: 16px; 
-    width: 16px; 
-} 
-  
-  #production::-webkit-scrollbar-thumb { 
-    background: black; 
-} 
-  
- #production::-webkit-scrollbar-track { 
-    background: white; 
-} 
-
-
-#store {
-    min-width: 300px;
-    max-width: 300px;
-    overflow-y: scroll;
-    background: rgb(0, 0, 0);
-    background: linear-gradient(180deg, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 0) 40%, rgba(0, 0, 0, 0) 52%, rgba(0, 0, 0, 1) 86%);
-}
-
-#store h2{
-    text-shadow: 0px 0px 4px #000000;
-}
-
-#store::-webkit-scrollbar { 
-    width: 15px; 
-    border: 2px solid blue; 
-    height: 80%;
-} 
-  
-#store::-webkit-scrollbar-button:single-button { 
-    background-color: red; 
-    height: 16px; 
-    width: 16px; 
-} 
-  
-#store::-webkit-scrollbar-thumb { 
-    background: black; 
-} 
-  
-#store::-webkit-scrollbar-track { 
-    background: white; 
-} 
