--- a/assets/css/base/_reset.css
+++ b/assets/css/base/_reset.css
@@ -1,14 +1,24 @@
+/* ---- RESET PAGE ---- */
 *{
+    font-family: "Merriweather";
+    font-size: 16px;
+    color: #ffffff;
     box-sizing: border-box;
-    font-family: 'Merriweather';
+    user-select: none;
+    /* Surbrillance compatbilité navigateurs */
     -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
-    user-select: none;
+
 }
 
 body{
     margin: 0;
     background-image: url('../../images/bg-blue.jpg');
-    background-repeat: repeat;
+}
+
+h1,h2{
+    font-size: 24px;
+    font-weight: bold;
+    text-shadow: 0px 1px 4px #000000;
 }
